dhall/tests/type-errors/unit/NaturalSubtractNotNatural.txt
Type error: Unhandled error: error: wrong type of function argument
 --> <current file>:1:0
  |
1 | Natural/subtract True True
  | ^^^^^^^^^^^^^^^^ this expects an argument of type: Natural
  |                  ^^^^ but this has type: Bool
  |
  = note: expected type `Natural`
             found type `Bool`
